# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

playersdir=$(pkgdatadir)/data1/players

nobase_dist_players_DATA = \
	commander/blue.jpg \
	commander/blue_i.jpg \
	commander/bump1.wav \
	commander/death1.wav \
	commander/death2.wav \
	commander/death3.wav \
	commander/death4.wav \
	commander/default.jpg \
	commander/default_i.jpg \
	commander/default_normal.tga \
	commander/defaultcommanderfx.tga \
	commander/drown1.wav \
	commander/fall1.wav \
	commander/fall2.wav \
	commander/gurp1.wav \
	commander/gurp2.wav \
	commander/human \
	commander/jump1.wav \
	commander/lod1.iqm \
	commander/lod1.rgd \
	commander/lod2.iqm \
	commander/lod2.rgd \
	commander/pain100_1.wav \
	commander/pain100_2.wav \
	commander/pain25_1.wav \
	commander/pain25_2.wav \
	commander/pain50_1.wav \
	commander/pain50_2.wav \
	commander/pain75_1.wav \
	commander/pain75_2.wav \
	commander/red.jpg \
	commander/red_i.jpg \
	commander/tris.iqm \
	commander/tris.rgd \
	commander/w_beamgun.iqm \
	commander/w_beamgun.skin \
	commander/w_blaster.iqm \
	commander/w_blaster.skin \
	commander/w_chaingun.iqm \
	commander/w_chaingun.skin \
	commander/w_disruptor.iqm \
	commander/w_disruptor.skin \
	commander/w_flamethrower.iqm \
	commander/w_flamethrower.skin \
	commander/w_grapple.iqm \
	commander/w_grapple.skin \
	commander/w_minderaser.iqm \
	commander/w_minderaser.skin \
	commander/w_rlauncher.iqm \
	commander/w_rlauncher.skin \
	commander/w_smartgun.iqm \
	commander/w_smartgun.skin \
	commander/w_vaporizer.iqm \
	commander/w_vaporizer.skin \
	commander/w_violator.iqm \
	commander/w_violator.skin \
	commander/weapon.iqm \
	commander/weapon.skin \
	enforcer/blue.jpg \
	enforcer/blue_i.jpg \
	enforcer/blueenforcerfx.tga \
	enforcer/bump1.wav \
	enforcer/death1.wav \
	enforcer/death2.wav \
	enforcer/death3.wav \
	enforcer/death4.wav \
	enforcer/default.jpg \
	enforcer/default_i.jpg \
	enforcer/default_normal.tga \
	enforcer/defaultenforcerfx.tga \
	enforcer/drown1.wav \
	enforcer/fall1.wav \
	enforcer/fall2.wav \
	enforcer/gurp1.wav \
	enforcer/gurp2.wav \
	enforcer/human \
	enforcer/jump1.wav \
	enforcer/lod1.iqm \
	enforcer/lod1.rgd \
	enforcer/lod2.iqm \
	enforcer/lod2.rgd \
	enforcer/pain100_1.wav \
	enforcer/pain100_2.wav \
	enforcer/pain25_1.wav \
	enforcer/pain25_2.wav \
	enforcer/pain50_1.wav \
	enforcer/pain50_2.wav \
	enforcer/pain75_1.wav \
	enforcer/pain75_2.wav \
	enforcer/red.jpg \
	enforcer/red_i.jpg \
	enforcer/tris.iqm \
	enforcer/tris.rgd \
	enforcer/w_beamgun.iqm \
	enforcer/w_beamgun.skin \
	enforcer/w_blaster.iqm \
	enforcer/w_blaster.skin \
	enforcer/w_chaingun.iqm \
	enforcer/w_chaingun.skin \
	enforcer/w_disruptor.iqm \
	enforcer/w_disruptor.skin \
	enforcer/w_flamethrower.iqm \
	enforcer/w_flamethrower.skin \
	enforcer/w_grapple.iqm \
	enforcer/w_grapple.skin \
	enforcer/w_minderaser.iqm \
	enforcer/w_minderaser.skin \
	enforcer/w_rlauncher.iqm \
	enforcer/w_rlauncher.skin \
	enforcer/w_smartgun.iqm \
	enforcer/w_smartgun.skin \
	enforcer/w_vaporizer.iqm \
	enforcer/w_vaporizer.skin \
	enforcer/w_violator.iqm \
	enforcer/w_violator.skin \
	enforcer/weapon.iqm \
	enforcer/weapon.skin \
	femborg/blue.jpg \
	femborg/blue_i.jpg \
	femborg/bluefemborgfx.tga \
	femborg/bump1.wav \
	femborg/death1.wav \
	femborg/death2.wav \
	femborg/death3.wav \
	femborg/death4.wav \
	femborg/default.jpg \
	femborg/default_i.jpg \
	femborg/default_normal.tga \
	femborg/defaultfemborgfx.tga \
	femborg/drown1.wav \
	femborg/fall1.wav \
	femborg/fall2.wav \
	femborg/gurp1.wav \
	femborg/gurp2.wav \
	femborg/human \
	femborg/jump1.wav \
	femborg/lod1.iqm \
	femborg/lod1.rgd \
	femborg/lod2.iqm \
	femborg/lod2.rgd \
	femborg/pain100_1.wav \
	femborg/pain100_2.wav \
	femborg/pain25_1.wav \
	femborg/pain25_2.wav \
	femborg/pain50_1.wav \
	femborg/pain50_2.wav \
	femborg/pain75_1.wav \
	femborg/pain75_2.wav \
	femborg/red.jpg \
	femborg/red_i.jpg \
	femborg/tris.iqm \
	femborg/tris.rgd \
	femborg/w_beamgun.iqm \
	femborg/w_beamgun.skin \
	femborg/w_blaster.iqm \
	femborg/w_blaster.skin \
	femborg/w_chaingun.iqm \
	femborg/w_chaingun.skin \
	femborg/w_disruptor.iqm \
	femborg/w_disruptor.skin \
	femborg/w_flamethrower.iqm \
	femborg/w_flamethrower.skin \
	femborg/w_grapple.iqm \
	femborg/w_grapple.skin \
	femborg/w_minderaser.iqm \
	femborg/w_minderaser.skin \
	femborg/w_rlauncher.iqm \
	femborg/w_rlauncher.skin \
	femborg/w_smartgun.iqm \
	femborg/w_smartgun.skin \
	femborg/w_vaporizer.iqm \
	femborg/w_vaporizer.skin \
	femborg/w_violator.iqm \
	femborg/w_violator.skin \
	femborg/weapon.iqm \
	femborg/weapon.skin \
	martiancyborg/alien \
	martiancyborg/blue.jpg \
	martiancyborg/blue_i.jpg \
	martiancyborg/bluecyborgfx.tga \
	martiancyborg/bump1.wav \
	martiancyborg/death1.wav \
	martiancyborg/death2.wav \
	martiancyborg/death3.wav \
	martiancyborg/death4.wav \
	martiancyborg/default.jpg \
	martiancyborg/default_i.jpg \
	martiancyborg/default_normal.tga \
	martiancyborg/defaultcyborgfx.tga \
	martiancyborg/drown1.wav \
	martiancyborg/fall1.wav \
	martiancyborg/fall2.wav \
	martiancyborg/gurp1.wav \
	martiancyborg/gurp2.wav \
	martiancyborg/helmet.iqm \
	martiancyborg/jump1.wav \
	martiancyborg/lod1.iqm \
	martiancyborg/lod1.rgd \
	martiancyborg/lod2.iqm \
	martiancyborg/lod2.rgd \
	martiancyborg/pain100_1.wav \
	martiancyborg/pain100_2.wav \
	martiancyborg/pain25_1.wav \
	martiancyborg/pain25_2.wav \
	martiancyborg/pain50_1.wav \
	martiancyborg/pain50_2.wav \
	martiancyborg/pain75_1.wav \
	martiancyborg/pain75_2.wav \
	martiancyborg/red.jpg \
	martiancyborg/red_i.jpg \
	martiancyborg/tris.iqm \
	martiancyborg/tris.rgd \
	martiancyborg/w_beamgun.iqm \
	martiancyborg/w_beamgun.skin \
	martiancyborg/w_blaster.iqm \
	martiancyborg/w_blaster.skin \
	martiancyborg/w_chaingun.iqm \
	martiancyborg/w_chaingun.skin \
	martiancyborg/w_disruptor.iqm \
	martiancyborg/w_disruptor.skin \
	martiancyborg/w_flamethrower.iqm \
	martiancyborg/w_flamethrower.skin \
	martiancyborg/w_grapple.iqm \
	martiancyborg/w_grapple.skin \
	martiancyborg/w_minderaser.iqm \
	martiancyborg/w_minderaser.skin \
	martiancyborg/w_rlauncher.iqm \
	martiancyborg/w_rlauncher.skin \
	martiancyborg/w_smartgun.iqm \
	martiancyborg/w_smartgun.skin \
	martiancyborg/w_vaporizer.iqm \
	martiancyborg/w_vaporizer.skin \
	martiancyborg/w_violator.iqm \
	martiancyborg/w_violator.skin \
	martiancyborg/weapon.iqm \
	martiancyborg/weapon.jpg \
	martiancyborg/weapon.skin \
	martianenforcer/alien \
	martianenforcer/blue.jpg \
	martianenforcer/blue_i.jpg \
	martianenforcer/bluemartianfx.tga \
	martianenforcer/bump1.wav \
	martianenforcer/death1.wav \
	martianenforcer/death2.wav \
	martianenforcer/death3.wav \
	martianenforcer/death4.wav \
	martianenforcer/default.jpg \
	martianenforcer/default_i.jpg \
	martianenforcer/default_normal.tga \
	martianenforcer/defaultmartianfx.tga \
	martianenforcer/destoroyah.jpg \
	martianenforcer/destoroyah_i.jpg \
	martianenforcer/destoroyah_normal.tga \
	martianenforcer/destoroyahfx.tga \
	martianenforcer/drown1.wav \
	martianenforcer/fall1.wav \
	martianenforcer/fall2.wav \
	martianenforcer/gasp1.wav \
	martianenforcer/gasp2.wav \
	martianenforcer/gurp1.wav \
	martianenforcer/gurp2.wav \
	martianenforcer/head.md2 \
	martianenforcer/helmet.iqm \
	martianenforcer/helmet.md2 \
	martianenforcer/jump1.wav \
	martianenforcer/lod1.iqm \
	martianenforcer/lod1.rgd \
	martianenforcer/lod2.iqm \
	martianenforcer/lod2.rgd \
	martianenforcer/pain100_1.wav \
	martianenforcer/pain100_2.wav \
	martianenforcer/pain25_1.wav \
	martianenforcer/pain25_2.wav \
	martianenforcer/pain50_1.wav \
	martianenforcer/pain50_2.wav \
	martianenforcer/pain75_1.wav \
	martianenforcer/pain75_2.wav \
	martianenforcer/red.jpg \
	martianenforcer/red_i.jpg \
	martianenforcer/tris.iqm \
	martianenforcer/tris.rgd \
	martianenforcer/w_beamgun.iqm \
	martianenforcer/w_beamgun.skin \
	martianenforcer/w_blaster.iqm \
	martianenforcer/w_blaster.skin \
	martianenforcer/w_chaingun.iqm \
	martianenforcer/w_chaingun.skin \
	martianenforcer/w_disruptor.iqm \
	martianenforcer/w_disruptor.skin \
	martianenforcer/w_flamethrower.iqm \
	martianenforcer/w_flamethrower.skin \
	martianenforcer/w_grapple.iqm \
	martianenforcer/w_grapple.skin \
	martianenforcer/w_minderaser.iqm \
	martianenforcer/w_minderaser.skin \
	martianenforcer/w_rlauncher.iqm \
	martianenforcer/w_rlauncher.skin \
	martianenforcer/w_smartgun.iqm \
	martianenforcer/w_smartgun.skin \
	martianenforcer/w_vaporizer.iqm \
	martianenforcer/w_vaporizer.skin \
	martianenforcer/w_violator.iqm \
	martianenforcer/w_violator.skin \
	martianenforcer/weapon.iqm \
	martianenforcer/weapon.skin \
	martianoverlord/alien \
	martianoverlord/blue.jpg \
	martianoverlord/blue_i.jpg \
	martianoverlord/blueoverlordfx.tga \
	martianoverlord/bump1.wav \
	martianoverlord/death1.wav \
	martianoverlord/death2.wav \
	martianoverlord/death3.wav \
	martianoverlord/death4.wav \
	martianoverlord/default.jpg \
	martianoverlord/default_i.jpg \
	martianoverlord/default_normal.tga \
	martianoverlord/defaultoverlordfx.tga \
	martianoverlord/drown1.wav \
	martianoverlord/fall1.wav \
	martianoverlord/fall2.wav \
	martianoverlord/gasp1.wav \
	martianoverlord/gasp2.wav \
	martianoverlord/gurp1.wav \
	martianoverlord/gurp2.wav \
	martianoverlord/helmet.iqm \
	martianoverlord/jump1.wav \
	martianoverlord/lod1.iqm \
	martianoverlord/lod1.rgd \
	martianoverlord/lod2.iqm \
	martianoverlord/lod2.rgd \
	martianoverlord/pain100_1.wav \
	martianoverlord/pain100_2.wav \
	martianoverlord/pain25_1.wav \
	martianoverlord/pain25_2.wav \
	martianoverlord/pain50_1.wav \
	martianoverlord/pain50_2.wav \
	martianoverlord/pain75_1.wav \
	martianoverlord/pain75_2.wav \
	martianoverlord/red.jpg \
	martianoverlord/red_i.jpg \
	martianoverlord/tris.iqm \
	martianoverlord/tris.rgd \
	martianoverlord/w_beamgun.iqm \
	martianoverlord/w_beamgun.skin \
	martianoverlord/w_blaster.iqm \
	martianoverlord/w_blaster.skin \
	martianoverlord/w_chaingun.iqm \
	martianoverlord/w_chaingun.skin \
	martianoverlord/w_disruptor.iqm \
	martianoverlord/w_disruptor.skin \
	martianoverlord/w_flamethrower.iqm \
	martianoverlord/w_flamethrower.skin \
	martianoverlord/w_grapple.iqm \
	martianoverlord/w_grapple.skin \
	martianoverlord/w_minderaser.iqm \
	martianoverlord/w_minderaser.skin \
	martianoverlord/w_rlauncher.iqm \
	martianoverlord/w_rlauncher.skin \
	martianoverlord/w_smartgun.iqm \
	martianoverlord/w_smartgun.skin \
	martianoverlord/w_vaporizer.iqm \
	martianoverlord/w_vaporizer.skin \
	martianoverlord/w_violator.iqm \
	martianoverlord/w_violator.skin \
	martianoverlord/weapon.iqm \
	martianoverlord/weapon.skin \
	martianwarrior/alien \
	martianwarrior/blue.jpg \
	martianwarrior/blue_i.jpg \
	martianwarrior/bluewarriorfx.tga \
	martianwarrior/bump1.wav \
	martianwarrior/death1.wav \
	martianwarrior/death2.wav \
	martianwarrior/death3.wav \
	martianwarrior/death4.wav \
	martianwarrior/default.jpg \
	martianwarrior/default_i.jpg \
	martianwarrior/default_normal.tga \
	martianwarrior/defaultwarriorfx.tga \
	martianwarrior/drown1.wav \
	martianwarrior/fall1.wav \
	martianwarrior/fall2.wav \
	martianwarrior/gamara.jpg \
	martianwarrior/gamara_i.jpg \
	martianwarrior/gamara_normal.tga \
	martianwarrior/gamarafx.tga \
	martianwarrior/gasp1.wav \
	martianwarrior/gasp2.wav \
	martianwarrior/gurp1.wav \
	martianwarrior/gurp2.wav \
	martianwarrior/helmet.iqm \
	martianwarrior/jump1.wav \
	martianwarrior/lod1.iqm \
	martianwarrior/lod1.rgd \
	martianwarrior/lod2.iqm \
	martianwarrior/lod2.rgd \
	martianwarrior/pain100_1.wav \
	martianwarrior/pain100_2.wav \
	martianwarrior/pain25_1.wav \
	martianwarrior/pain25_2.wav \
	martianwarrior/pain50_1.wav \
	martianwarrior/pain50_2.wav \
	martianwarrior/pain75_1.wav \
	martianwarrior/pain75_2.wav \
	martianwarrior/red.jpg \
	martianwarrior/red_i.jpg \
	martianwarrior/tris.iqm \
	martianwarrior/tris.rgd \
	martianwarrior/w_beamgun.iqm \
	martianwarrior/w_beamgun.skin \
	martianwarrior/w_blaster.iqm \
	martianwarrior/w_blaster.skin \
	martianwarrior/w_chaingun.iqm \
	martianwarrior/w_chaingun.skin \
	martianwarrior/w_disruptor.iqm \
	martianwarrior/w_disruptor.skin \
	martianwarrior/w_flamethrower.iqm \
	martianwarrior/w_flamethrower.skin \
	martianwarrior/w_grapple.iqm \
	martianwarrior/w_grapple.skin \
	martianwarrior/w_minderaser.iqm \
	martianwarrior/w_minderaser.skin \
	martianwarrior/w_rlauncher.iqm \
	martianwarrior/w_rlauncher.skin \
	martianwarrior/w_smartgun.iqm \
	martianwarrior/w_smartgun.skin \
	martianwarrior/w_vaporizer.iqm \
	martianwarrior/w_vaporizer.skin \
	martianwarrior/w_violator.iqm \
	martianwarrior/w_violator.skin \
	martianwarrior/weapon.iqm \
	martianwarrior/weapon.skin \
	rustbot/blue.jpg \
	rustbot/blue_i.jpg \
	rustbot/bump1.wav \
	rustbot/death1.wav \
	rustbot/death2.wav \
	rustbot/death3.wav \
	rustbot/death4.wav \
	rustbot/default.jpg \
	rustbot/default_i.jpg \
	rustbot/default_normal.jpg \
	rustbot/defaultrustbotfx.tga \
	rustbot/drown1.wav \
	rustbot/fall1.wav \
	rustbot/fall2.wav \
	rustbot/gasp1.wav \
	rustbot/gasp2.wav \
	rustbot/gurp1.wav \
	rustbot/gurp2.wav \
	rustbot/helmet.iqm \
	rustbot/jump1.wav \
	rustbot/lod1.iqm \
	rustbot/lod1.rgd \
	rustbot/lod2.iqm \
	rustbot/lod2.rgd \
	rustbot/pain100_1.wav \
	rustbot/pain100_2.wav \
	rustbot/pain25_1.wav \
	rustbot/pain25_2.wav \
	rustbot/pain50_1.wav \
	rustbot/pain50_2.wav \
	rustbot/pain75_1.wav \
	rustbot/pain75_2.wav \
	rustbot/red.jpg \
	rustbot/red_i.jpg \
	rustbot/redrustbotfx.tga \
	rustbot/robot \
	rustbot/tris.iqm \
	rustbot/tris.rgd \
	rustbot/w_beamgun.iqm \
	rustbot/w_beamgun.skin \
	rustbot/w_blaster.iqm \
	rustbot/w_blaster.skin \
	rustbot/w_chaingun.iqm \
	rustbot/w_chaingun.skin \
	rustbot/w_disruptor.iqm \
	rustbot/w_disruptor.skin \
	rustbot/w_flamethrower.iqm \
	rustbot/w_flamethrower.skin \
	rustbot/w_grapple.iqm \
	rustbot/w_grapple.skin \
	rustbot/w_minderaser.iqm \
	rustbot/w_minderaser.skin \
	rustbot/w_rlauncher.iqm \
	rustbot/w_rlauncher.skin \
	rustbot/w_smartgun.iqm \
	rustbot/w_smartgun.skin \
	rustbot/w_vaporizer.iqm \
	rustbot/w_vaporizer.skin \
	rustbot/w_violator.iqm \
	rustbot/w_violator.skin \
	rustbot/weapon.iqm \
	rustbot/weapon.skin \
	slashbot/blue.jpg \
	slashbot/blue_i.jpg \
	slashbot/bump1.wav \
	slashbot/death1.wav \
	slashbot/death2.wav \
	slashbot/death3.wav \
	slashbot/death4.wav \
	slashbot/default.jpg \
	slashbot/default_i.jpg \
	slashbot/default_normal.jpg \
	slashbot/defaultslashbotfx.tga \
	slashbot/drown1.wav \
	slashbot/fall1.wav \
	slashbot/fall2.wav \
	slashbot/gurp1.wav \
	slashbot/gurp2.wav \
	slashbot/jump1.wav \
	slashbot/lod1.iqm \
	slashbot/lod1.rgd \
	slashbot/lod2.iqm \
	slashbot/lod2.rgd \
	slashbot/pain100_1.wav \
	slashbot/pain100_2.wav \
	slashbot/pain25_1.wav \
	slashbot/pain25_2.wav \
	slashbot/pain50_1.wav \
	slashbot/pain50_2.wav \
	slashbot/pain75_1.wav \
	slashbot/pain75_2.wav \
	slashbot/red.jpg \
	slashbot/red_i.jpg \
	slashbot/robot \
	slashbot/tris.iqm \
	slashbot/tris.rgd \
	slashbot/w_beamgun.iqm \
	slashbot/w_beamgun.skin \
	slashbot/w_blaster.iqm \
	slashbot/w_blaster.skin \
	slashbot/w_chaingun.iqm \
	slashbot/w_chaingun.skin \
	slashbot/w_disruptor.iqm \
	slashbot/w_disruptor.skin \
	slashbot/w_flamethrower.iqm \
	slashbot/w_flamethrower.skin \
	slashbot/w_grapple.iqm \
	slashbot/w_grapple.skin \
	slashbot/w_minderaser.iqm \
	slashbot/w_minderaser.skin \
	slashbot/w_rlauncher.iqm \
	slashbot/w_rlauncher.skin \
	slashbot/w_smartgun.iqm \
	slashbot/w_smartgun.skin \
	slashbot/w_vaporizer.iqm \
	slashbot/w_vaporizer.skin \
	slashbot/w_violator.iqm \
	slashbot/w_violator.skin \
	slashbot/weapon.iqm \
	slashbot/weapon.skin
