# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

sounddir=$(pkgdatadir)/data1/sound

nobase_dist_sound_DATA = \
	doors/dr1_end.wav \
	doors/dr1_mid.wav \
	doors/dr1_strt.wav \
	items/damage2.wav \
	items/damage3.wav \
	items/damage.wav \
	items/hasteout.wav \
	items/haste.wav \
	items/l_health.wav \
	items/m_health.wav \
	items/n_health.wav \
	items/powerup.wav \
	items/protect2.wav \
	items/protect3.wav \
	items/protect4.wav \
	items/protect.wav \
	items/respawn1.wav \
	items/s_health.wav \
	items/sproingout.wav \
	items/sproing.wav \
	misc/1frags.wav \
	misc/2frags.wav \
	misc/3frags.wav \
	misc/am_pkup.wav \
	misc/ar1_pkup.wav \
	misc/ar2_pkup.wav \
	misc/ar3_pkup.wav \
	misc/bigtele.wav \
	misc/blue_increases.wav \
	misc/blue_picked.wav \
	misc/bluepndisabled.wav \
	misc/bluepnenabled.wav \
	misc/blue_returned.wav \
	misc/blue_scores.wav \
	misc/blue_takes.wav \
	misc/bluevulnerable.wav \
	misc/blue_wins_ctf.wav \
	misc/blue_wins.wav \
	misc/db_pickup.wav \
	misc/db_score.wav \
	misc/deathray/fizz.wav \
	misc/deathray/shoot.wav \
	misc/deathray/weird2.wav \
	misc/death.wav \
	misc/fight.wav \
	misc/game_tied_ctf.wav \
	misc/game_tied.wav \
	misc/godlike.wav \
	misc/headshot.wav \
	misc/hit2.wav \
	misc/hit.wav \
	misc/jetpackspawn.wav \
	misc/lasfly.wav \
	misc/menu1.wav \
	misc/menu2.wav \
	misc/menu3.wav \
	misc/minderaser.wav \
	misc/one.wav \
	misc/pc_up.wav \
	misc/piranha.wav \
	misc/rampage.wav \
	misc/red_increases.wav \
	misc/red_picked.wav \
	misc/redpndisabled.wav \
	misc/redpnenabled.wav \
	misc/red_returned.wav \
	misc/red_scores.wav \
	misc/red_takes.wav \
	misc/redvulnerable.wav \
	misc/red_wins_ctf.wav \
	misc/red_wins.wav \
	misc/reject.wav \
	misc/scores_tied.wav \
	misc/spawn1.wav \
	misc/talk1.wav \
	misc/talk.wav \
	misc/tele1.wav \
	misc/tele_up.wav \
	misc/three.wav \
	misc/trigger1.wav \
	misc/two.wav \
	misc/w_pkup.wav \
	music/adrenaline.ogg \
	music/cp-ribeye.ogg \
	music/Divinity_Alien_Swarm.ogg \
	music/Divinity_Angry.ogg \
	music/Divinity_Deep.ogg \
	music/Divinity_Hunted.ogg \
	music/Divinity_Massive.ogg \
	music/Divinity_Mystery.ogg \
	music/Divinity_Ominous.ogg \
	music/Divinity_Poison.ogg \
	music/Divinity_Shattering.ogg \
	music/Divinity_Special.ogg \
	music/Divinity_compression.ogg \
	music/Divinity_lack_of_success.ogg \
	music/Divinity_menace.ogg \
	music/Divinity_misunderstood.ogg \
	music/Divinity_morphing.ogg \
	music/Divinity_never_ending.ogg \
	music/Divinity_powerful.ogg \
	music/Divinity_redress.ogg \
	music/dm-annihilation.ogg \
	music/dm-deathray.ogg \
	music/dm-deimos.ogg \
	music/dm-dismal.ogg \
	music/dm-dynamo.ogg \
	music/dm-eternal.ogg \
	music/dm-extermination.ogg \
	music/dm-frontier.ogg \
	music/dm-horus.ogg \
	music/dm-inferno.ogg \
	music/dm-redred.ogg \
	music/dm-saucer.ogg \
	music/dm-turbo.ogg \
	music/dm-warmachine.ogg \
	music/joyce1.ogg \
	music/joyce2.ogg \
	music/joyce3.ogg \
	music/menumusic.ogg \
	player/burn1.wav \
	player/burn2.wav \
	player/death1.wav \
	player/death4.wav \
	player/drown1.wav \
	player/fall1.wav \
	player/fall2.wav \
	player/fry.wav \
	player/gasp1.wav \
	player/gasp2.wav \
	player/jump1.wav \
	player/land1.wav \
	player/lava1.wav \
	player/lava2.wav \
	player/lava_in.wav \
	player/male/bump1.wav \
	player/male/death1.wav \
	player/male/death2.wav \
	player/male/death3.wav \
	player/male/death4.wav \
	player/male/drown1.wav \
	player/male/fall1.wav \
	player/male/fall2.wav \
	player/male/gurp1.wav \
	player/male/gurp2.wav \
	player/male/jump1.wav \
	player/male/pain100_1.wav \
	player/male/pain100_2.wav \
	player/male/pain25_1.wav \
	player/male/pain25_2.wav \
	player/male/pain50_1.wav \
	player/male/pain50_2.wav \
	player/male/pain75_1.wav \
	player/male/pain75_2.wav \
	player/step1.wav \
	player/step2.wav \
	player/step3.wav \
	player/step4.wav \
	player/step_metal1.wav \
	player/step_metal2.wav \
	player/step_metal3.wav \
	player/step_metal4.wav \
	player/wade1.wav \
	player/wade2.wav \
	player/wade3.wav \
	player/watr_in.wav \
	player/watr_out.wav \
	player/watr_un.wav \
	smallmech/sight.wav \
	taunts/commander/taunt1.wav \
	taunts/commander/taunt2.wav \
	taunts/commander/taunt3.wav \
	taunts/commander/taunt4.wav \
	taunts/commander/taunt5.wav \
	taunts/enforcer/taunt1.wav \
	taunts/enforcer/taunt2.wav \
	taunts/enforcer/taunt3.wav \
	taunts/enforcer/taunt4.wav \
	taunts/enforcer/taunt5.wav \
	taunts/femborg/taunt1.wav \
	taunts/femborg/taunt2.wav \
	taunts/femborg/taunt3.wav \
	taunts/femborg/taunt4.wav \
	taunts/femborg/taunt5.wav \
	taunts/martiancyborg/taunt1.wav \
	taunts/martiancyborg/taunt2.wav \
	taunts/martiancyborg/taunt3.wav \
	taunts/martiancyborg/taunt4.wav \
	taunts/martiancyborg/taunt5.wav \
	taunts/martianenforcer/taunt1.wav \
	taunts/martianenforcer/taunt2.wav \
	taunts/martianenforcer/taunt3.wav \
	taunts/martianenforcer/taunt4.wav \
	taunts/martianenforcer/taunt5.wav \
	taunts/martianoverlord/taunt1.wav \
	taunts/martianoverlord/taunt2.wav \
	taunts/martianoverlord/taunt3.wav \
	taunts/martianoverlord/taunt4.wav \
	taunts/martianoverlord/taunt5.wav \
	taunts/martianwarrior/taunt1.wav \
	taunts/martianwarrior/taunt2.wav \
	taunts/martianwarrior/taunt3.wav \
	taunts/martianwarrior/taunt4.wav \
	taunts/martianwarrior/taunt5.wav \
	taunts/rustbot/taunt1.wav \
	taunts/rustbot/taunt2.wav \
	taunts/rustbot/taunt3.wav \
	taunts/rustbot/taunt4.wav \
	taunts/rustbot/taunt5.wav \
	taunts/slashbot/taunt1.wav \
	taunts/slashbot/taunt2.wav \
	taunts/slashbot/taunt3.wav \
	taunts/slashbot/taunt4.wav \
	taunts/slashbot/taunt5.wav \
	vehicles/bomberidle.wav \
	vehicles/explodebomb.wav \
	vehicles/flybomb.wav \
	vehicles/got_in.wav \
	vehicles/shootbomb.wav \
	vehicles/shootlaser.wav \
	vehicles/warning.wav \
	weapons/adetonatordown.wav \
	weapons/adetonatorup.wav \
	weapons/beamgunreload.wav \
	weapons/biglaser.wav \
	weapons/blasterreload.wav \
	weapons/blastf1a.wav \
	weapons/chaingunreload.wav \
	weapons/clank.wav \
	weapons/clink01.wav \
	weapons/clink02.wav \
	weapons/disruptorreload.wav \
	weapons/electroball.wav \
	weapons/energyfield.wav \
	weapons/flamereload.wav \
	weapons/grenlb1b.wav \
	weapons/grenlf1a.wav \
	weapons/grenlr1b.wav \
	weapons/grenlx1a.wav \
	weapons/hypbrl1a.wav \
	weapons/hyprbf1a.wav \
	weapons/lightoff.wav \
	weapons/lighton.wav \
	weapons/machgdown.wav \
	weapons/machgf1b.wav \
	weapons/machgf2b.wav \
	weapons/machgf3b.wav \
	weapons/machgf4b.wav \
	weapons/machgf5b.wav \
	weapons/machgup.wav \
	weapons/minderaserfire.wav \
	weapons/minderaserreload.wav \
	weapons/noammo.wav \
	weapons/railgf1a.wav \
	weapons/rlauncherreload.wav \
	weapons/rockfly.wav \
	weapons/rocklf1a.wav \
	weapons/rocklr1b.wav \
	weapons/rocklx1a.wav \
	weapons/seeker.wav \
	weapons/seeker_fast.wav \
	weapons/seeker_zap.wav \
	weapons/shotgf1b.wav \
	weapons/smartgun_hum.wav \
	weapons/smartgunreload.wav \
	weapons/spidermov.wav \
	weapons/vaporizer_hum.wav \
	weapons/vaporizerreload.wav \
	weapons/viofire1.wav \
	weapons/viofire2.wav \
	weapons/violatorreload.wav \
	weapons/whoosh.wav \
	world/botwon.wav \
	world/button1.wav \
	world/button2.wav \
	world/distantjet.wav \
	world/electricity.wav \
	world/explosion1.wav \
	world/explosion2.wav \
	world/foghorn.wav \
	world/forcefield.wav \
	world/hyprbf1a.wav \
	world/jumppad1.wav \
	world/laser1.wav \
	world/platstop.wav \
	world/rcktfly.wav \
	world/ric1.wav \
	world/ric2.wav \
	world/ric3.wav \
	world/rocket.wav \
	world/steam1.wav \
	world/steam2.wav \
	world/turbine1.wav \
	world/vents.wav \
	world/water1.wav \
	world/weird.wav \
	world/youwin.wav
